# gen-ai-examples

./: .gitignore  README.md  requirements.txt
autogen/agent-example-001/: README.md  pyproject.toml
autogen/agent-example-001/src/: agentflow.py  app.py
chatgpt-integration/: README.md  basic-prompt.py
crew-ai/agent-example-001/: .env  README.md  pyproject.toml  pytest.ini
crew-ai/agent-example-001/src/: agentflow.py
crew-ai/agent-example-002/: README.md  pyproject.toml
crew-ai/agent-example-002/src/: agentflow.py  app.py
crew-ai/agent-example-003/: README.md
crew-ai/agent-example-003/src/: agentflow.py  app.py
genai-aws/: README.md  anthropic.py  llama3.py
langchain/aws-apis/: README.md  demoChatPromptTemplate.py  demoSequentialChain.py  ragAgent.py  requirements.txt
langchain/local-ollama-api/: README.md  promptTemplateLlama.py  ragEmbeddings.py  requirements.txt
langchain/openai-apis/: README.md  requirements.txt  vectorEmbeddings.py
langgraph/chatbot-aws/: README.md  main.py  requirements.txt
langgraph/chatbot-aws/chatbot/: core.py
langgraph/chatbot-langgraph-agents/agent-example-001/: .env  .gitignore  README.md  pyproject.toml
langgraph/chatbot-langgraph-agents/agent-example-001/src/: config.py  graph.py  main.py  memory.py
langgraph/chatbot-langgraph-agents/agent-example-002/: README.md  pyproject.toml
langgraph/chatbot-langgraph-agents/agent-example-002/rag_docs/: country_information.txt
langgraph/chatbot-langgraph-agents/agent-example-002/src/: config.py  graph.py  rag.py  (+1 more)
langgraph/chatbot-langgraph-agents/agent-example-003/: .gitignore  README.md  pyproject.toml
langgraph/chatbot-langgraph-agents/agent-example-003/rag_docs/: country_information.txt
langgraph/chatbot-langgraph-agents/agent-example-003/src/: graph.py  rag.py
langgraph/chatbot-langgraph-agents/agent-example-003/tests/unit/: test_respond_node.py
langgraph/chatbot-langgraph-agents/agent-example-004/: .env  .gitignore  README.md  pyproject.toml
langgraph/graph-visualization/: README.md  graph-view.py  requirements.txt
langsmith/aws-smith/: README.md  llmTracing.py  requirements.txt
mcp-integration/custom-mcp/example-001/: README.md  pyproject.toml
mcp-integration/tavily-mcp/: .env  .gitignore  README.md  pyproject.toml
mcp-integration/tavily-mcp/data/: bank_rates.csv
mcp-integration/tavily-mcp/src/: agent.py  streamlit_app.py  vector_setup.py
vectordb/: README.md
vectordb/chromadb/example-001/: .gitignore  README.md  pyproject.toml
vectordb/faissdb/example-001/: .gitignore  README.md  pyproject.toml
vectordb/milvusdb/example-001/: .env  README.md  pyproject.toml
vectordb/pineconedb/example-001/: .env  README.md  pyproject.toml
vectordb/qdrantdb/example-001/: .env  README.md  pyproject.toml
vectordb/weaviatedb/example-001/: .env  README.md  pyproject.toml
(+20 files in other folders)
