[project]
name = "agent-example-001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langgraph>=0.5.0",
    "langsmith>=0.4.4",
    "openai>=1.93.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
